--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #F0F3F7;
+}
+
 .Header>li,
 p {
     display: inline-block;
@@ -81,13 +85,91 @@ p {
     border-radius: 40%;
 }
 
-.say:hover{
+.say:hover {
     cursor: pointer;
     background-color: #3CA9E4;
 }
 
-.BodyHeader li:hover
-{
+.BodyHeader li:hover {
     cursor: pointer;
     border-bottom: 5px solid #3CA9E4;
 }
+
+
+table {
+    width: 80%;
+    margin: auto;
+    background-color: #FEFEFE;
+    margin-top: 100px;
+    border: 0.8px solid #CACFD0;
+    border-radius: 5px;
+}
+
+.thName {
+    text-align: left;
+    padding-left: 25px;
+    width: 350px;
+}
+
+tr>th {
+    font-size: 2em;
+    text-align: center;
+    font-weight: 500;
+    height: 80px;
+}
+
+
+th{
+    padding: 10px;
+    border-bottom: 1px solid #CACFD0;
+    border-right: 1px solid #CACFD0;
+}
+
+tr>td {
+    font-size: 0.5em;
+    text-align: center;
+    font-weight: 400;
+    height: 60px;
+    margin-left: 15px;
+    border-bottom: 1px solid #CACFD0;
+    padding: 10px;
+}
+
+.tdSimple {
+    font-size: 1.5em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.tdName>img {
+    width: 20%;
+    height: 150%;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: 15px;
+}
+
+.tdName>pre {
+    display: inline-block;
+    margin-left: 15px;
+    font-size: 3.5em;
+}
+
+
+/* 
+table{
+    margin:auto;
+    margin-top: 100px;
+    border: 2px solid black;
+}
+td{
+    border: 0.5px solid black;
+    padding: 10px;
+}
+tr{
+    padding: 5px;
+    border: 1px solid springgreen;
+}
+tr:hover{
+cursor: pointer;
+background-color: red;
+} */
